Look page and Magazine page masonry scripts updated to fix the alignment issues on those pages.

--- a/style.css
+++ b/style.css
@@ -1644,6 +1644,7 @@ body {
 
 
 	margin-left:-10px;
+        margin-right:-10px;
 
 
 
